# RobotTestGeneration

./: .gitignore  README.MD  README.md  TODO  WORKFLOW.md  performance.txt  processResults.py  run_mit.sh  run_mit_25001.sh  run_mit_25001_a.sh  run_mit_25001_b.sh  run_mit_25001_c.sh  run_mit_25001_demo.sh  run_mit_25002.sh  run_mit_25003.sh  run_mit_25004.sh  run_mit_25005.sh  run_mit_25006.sh  run_mit_25007.sh  run_mit_25008.sh  runmany.sh
AnafiSimulation/: README.MD  cagetest.py  getposition.py  joycontroller.py  maxtilt.py  runtest.py  runtestwithpos.py  takeoff.py  test.txt
HectorQuadrotor/: install.txt
Husky_WS/src/tester/: CMakeLists.txt  package.xml
Husky_WS/src/tester/launch/: test.launch
Husky_WS/src/tester/src/: collision_detector.cpp  goal_sender.cpp  position_viewer.py
Husky_WS/src/tester/worlds/: small.world
MITSimulation/: README.md  run_mit_25001.sh  run_mit_25002.sh  run_mit_25003.sh
MatlabTests/: license.txt  test.m
ParotSimulation/: example.mavlink  notes.txt  run_sphinx.sh
Python/: min_snap_close.py  min_snap_closed.py  min_snap_corridor.py  server.py  test_connection.py
ROS_WS/: README.md
ROS_WS/src/flightgoggles/flightgoggles/: CMakeLists.txt  package.xml
ROS_WS/src/flightgoggles/flightgoggles/config/drone/: drone.yaml
ROS_WS/src/flightgoggles/flightgoggles/launch/: core.launch  teleopExample.launch
ROS_WS/src/flightgoggles/flightgoggles/rviz/: third_person_drone_follower.rviz
RelatedWork/: Matrix.txt  Procedural.txt  Scenic.txt  VirtualWorlds.txt
RobotTestGenerationFinalResults/: README.md
TestGen/: AnafiParser.py  ConversionUtils.py  Dijkstra.py  DroneKinematic.py  DroneReachabilitySet.py  Edge.py  EquivalenceChecker.py  FigureManager.py  Node.py  (+35 more)
(+22177 files in other folders)
