<?xml version="1.0"?>
<package format="2">
  <name>flightgoggles</name>
  <version>0.0.0</version>
  <description>The flightgoggles package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="winterg@mit.edu">Winter Guerra</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="winterg@mit.edu">Winter Guerra</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
